    [Subhangi Ghosh].

  o BUG-FIX: Fix crash on rigid-body refine by atom selection with
    residue gaps [Joel Bard].

  o BUG-FIX: rename residue works on only the specified chain.

  o BUG-FIX: anomalous maps are now properly recovered from the state
    file [Phil Evans].

  o BUG-FIX: Symmetry is updated on accepting a Rotate/Translate
    modification [Ezra Peisach].

  o BUG-FIX: NCS differences were broken by gaps of different lengths
    [Ingo Korndoerfer].

  o BUG-FIX: Unconventionally formatted atom tree records in
    restraints cif now no longer cause a crash when using Chi Angles
    [JED].

  o BUG-FIX: Fix the crash when sphere refine was used at the same
    time that the geometry graph was displayed [JED].

  o BUG-FIX: rotate/translate large fragments now works better.

  o BUG-FIX: transform-map function fixed for 5 arguments.

  o BUG-FIX: Sort-chains no longer loses header information [Bob
    Nolte].

  o BUG-FIX: Environment distances are no longer drawn between atoms
    with differing non-blank alt-confs.

  o BUG-FIX: mmCIF file writing fixed.

  o BUG-FIX: Zero occupancy marker on hydrogens are not undisplayed
    properly [JED].

  o BUG-FIX: refining with structures from .res files sometimes crash
    when writing backup file on Mac [Derek Logan].

  o BUG-FIX: Rotating/translating ligands in CA+Ligands mode now works
    [Jim Thorpe].

  o BUG-FIX: Platinum can now have sensible bonds to N and O [John
    Helliwell].

  o BUG-FIX: Ramachandran plots work at the end of chains chains with
    missing residues [JED].

  o BUG-FIX: Environment distances display toggling anomolies cleaned
    up [Ed Pozharski].

  o BUG-FIX: Sequence view failed with SHELX molecules with high
    residue numbers [Stefan Becker].

  o BUG-FIX: SSM superposition now superposes the correct molecules
    when the option menus are not adjusted [Sam Stampfter].

-----

  Release 0.6.1

  o FEATURE: Quick-save - bound to Ctrl-S.
